# src/api/routes/auth/authorization.ts
@@ -2,7 +2,8 @@ import { NextFunction, Request, Response, Router } from 'express';
 import { Container } from 'typedi';
 import { Logger } from 'winston';
 
-import User from '../../../services/user';
+import User from '../../../services/users/user';
+import Token from '../../../services/authToken/token';
 import { IUserInputDTO, ITokenInputDTO, IUserLoginDTO } from '../../../interfaces/IUser';
 import bodyRequest from '../../requests';
 
@@ -12,6 +13,7 @@ export default (app: Router) => {
   app.use('/auth', route);
 
   const authServiceInstance = Container.get(User);
+  const tokenServiceInstance = Container.get(Token);
   const logger: Logger = Container.get('logger');
 
   route.post('/register', bodyRequest.registerSchema, async (req: Request, res: Response, next: NextFunction) => {
@@ -24,8 +26,7 @@ export default (app: Router) => {
       return next(err);
     }
   });
-
-  route.post('/verify-email', bodyRequest.verifySchema, async (req: Request, res: Response, next: NextFunction) => {
+  route.post('/verify-email', bodyRequest.tokenSchema, async (req: Request, res: Response, next: NextFunction) => {
     logger.debug('Calling Verify Email endpoint with body: %o', req.body);
     try {
       const response = await authServiceInstance.verifyAccount(req.body as ITokenInputDTO);
@@ -35,11 +36,37 @@ export default (app: Router) => {
       return next(err);
     }
   });
-
-  route.post('/login', async (req: Request, res: Response, next: NextFunction) => {
+  route.post('/login', bodyRequest.loginSchema, async (req: Request, res: Response, next: NextFunction) => {
     logger.debug('Calling User Login endpoint with body: %o', req.body);
     try {
       const response = await authServiceInstance.login(req.body as IUserLoginDTO, req.ip);
+      return res.status(200).json(response);
+    } catch (err) {
+      logger.error('🔥 error: %o', err);
+      return next(err);
+    }
+  });
+  route.post('/refresh-token', bodyRequest.tokenSchema, async (req: Request, res: Response, next: NextFunction) => {
+    logger.debug('Calling Refresh Token endpoint with body: %o', req.body);
+    try {
+      const response = await tokenServiceInstance.refreshToken(req.body as ITokenInputDTO, req.ip);
+      return res.status(200).json(response);
+    } catch (err) {
+      logger.error('🔥 error: %o', err);
+      return next(err);
+    }
+  });
+  route.post('/revoke-token', bodyRequest.tokenSchema, async (req: Request, res: Response, next: NextFunction) => {
+    logger.debug('Calling Refresh Token endpoint with body: %o', req.body);
+    try {
+      let authHeader;
+      if (
+        (req.headers.authorization && req.headers.authorization.split(' ')[0] === 'Token') ||
+        (req.headers.authorization && req.headers.authorization.split(' ')[0] === 'Bearer')
+      ) {
+        authHeader = req.headers.authorization.split(' ')[1];
+      }
+      const response = await tokenServiceInstance.revokeToken(req.body as ITokenInputDTO, req.ip, authHeader);
       return res.status(200).json(response);
     } catch (err) {
       logger.error('🔥 error: %o', err);
