# src/types/loggedUserResponse.ts
@@ -1,4 +1,5 @@
 export interface LoggedUserResponse {
   auth: boolean;
   jwtToken: string;
+  refreshToken: string;
 }
